Update info.md