@@ -13,3 +13,25 @@
 ## Output
 
  - [Install Artemis](https://medium.com/@hasnat.saeed/setup-activemq-artemis-on-ubuntu-18-04-76bb4975308b)
+
+sudo groupadd artemis
+sudo useradd -s /bin/false -g artemis -d /opt/artemis artemis
+cd /opt
+sudo wget https://archive.apache.org/dist/activemq/activemq-artemis/2.9.0/apache-artemis-2.9.0-bin.tar.gz
+sudo tar -xvzf apache-artemis-2.9.0-bin.tar.gz
+sudo mv apache-artemis-2.9.0 artemis
+sudo chown -R artemis: artemis
+sudo chmod o+x /opt/artemis/bin/
+cd /var/lib
+/opt/artemis/bin/artemis create test-broker
+
+Modify /opt/artemis/bin/artemis to add "--illegal-access=permit \" as JAVA command line parameter
+
+Modify /var/lib/test-broker/etc/bootstrap.xml (change bind from localhost from 0.0.0.0)
+
+Modify /var/lib/test-broker/etc/jolokia-access.xml (remove localhost from allow-origin)
+
+/var/lib/test-broker/bin/artemis run
+
+*I've looked into it and updated the Gradle version of the HelloWorld to be compatible with Java16.
+To use Java16, you also have to add the following to the build.gradle JVMArgs << "--illegal-access=permit"(or something similar for maven)*
